// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildMarksTree: handles leading inline objects in tree 1`] = `
[
  {
    "_key": "a",
    "_type": "image",
    "src": "/some/image.png",
  },
  {
    "_type": "@text",
    "text": "Include",
  },
  {
    "_type": "@text",
    "text": " the image.",
  },
]
`;

exports[`buildMarksTree: handles trailing inline objects in tree 1`] = `
[
  {
    "_type": "@text",
    "text": "Include",
  },
  {
    "_type": "@text",
    "text": " the image.",
  },
  {
    "_key": "c",
    "_type": "image",
    "src": "/some/image.png",
  },
]
`;

exports[`buildMarksTree: includes inline objects in tree 1`] = `
[
  {
    "_type": "@text",
    "text": "Include",
  },
  {
    "_key": "h",
    "_type": "image",
    "src": "/some/image.png",
  },
  {
    "_type": "@text",
    "text": " the image.",
  },
]
`;

exports[`buildMarksTree: includes inline objects in tree, with surrounding marks 1`] = `
[
  {
    "_key": "a",
    "_type": "@span",
    "children": [
      {
        "_key": "a",
        "_type": "@span",
        "children": [
          {
            "_type": "@text",
            "text": "Include",
          },
        ],
        "markDef": undefined,
        "markKey": "em",
        "markType": "em",
      },
    ],
    "markDef": undefined,
    "markKey": "strong",
    "markType": "strong",
  },
  {
    "_key": "h",
    "_type": "image",
    "src": "/some/image.png",
  },
  {
    "_key": "z",
    "_type": "@span",
    "children": [
      {
        "_key": "z",
        "_type": "@span",
        "children": [
          {
            "_type": "@text",
            "text": " the image.",
          },
        ],
        "markDef": undefined,
        "markKey": "em",
        "markType": "em",
      },
    ],
    "markDef": undefined,
    "markKey": "strong",
    "markType": "strong",
  },
]
`;

exports[`buildMarksTree: joins on adjacent spans with same annotation 1`] = `
[
  {
    "_key": "a",
    "_type": "@span",
    "children": [
      {
        "_type": "@text",
        "text": "Portable",
      },
      {
        "_type": "@text",
        "text": " Text!",
      },
    ],
    "markDef": {
      "_key": "link",
      "_type": "link",
      "href": "https://portabletext.org",
    },
    "markKey": "link",
    "markType": "link",
  },
]
`;

exports[`buildMarksTree: nests correctly, extracts correct \`markDef\` 1`] = `
[
  {
    "_type": "@text",
    "text": "This block ",
  },
  {
    "_type": "@text",
    "text": "",
  },
  {
    "_key": undefined,
    "_type": "@span",
    "children": [
      {
        "_type": "@text",
        "text": "contains",
      },
      {
        "_key": undefined,
        "_type": "@span",
        "children": [
          {
            "_type": "@text",
            "text": "a link",
          },
        ],
        "markDef": {
          "_key": "s0m3l1nk",
          "_type": "link",
          "href": "https://some.example/",
        },
        "markKey": "s0m3l1nk",
        "markType": "link",
      },
      {
        "_type": "@text",
        "text": " and some bolded text",
      },
    ],
    "markDef": undefined,
    "markKey": "strong",
    "markType": "strong",
  },
]
`;

exports[`buildMarksTree: nests decorators and annotations correctly, extracts correct \`markDef\` 1`] = `
[
  {
    "_type": "@text",
    "text": "This block ",
  },
  {
    "_key": undefined,
    "_type": "@span",
    "children": [
      {
        "_key": undefined,
        "_type": "@span",
        "children": [
          {
            "_type": "@text",
            "text": "contains",
          },
        ],
        "markDef": undefined,
        "markKey": "em",
        "markType": "em",
      },
      {
        "_key": undefined,
        "_type": "@span",
        "children": [
          {
            "_type": "@text",
            "text": "a link",
          },
        ],
        "markDef": undefined,
        "markKey": "strong",
        "markType": "strong",
      },
    ],
    "markDef": {
      "_key": "s0m3l1nk",
      "_type": "link",
      "href": "https://some.example/",
    },
    "markKey": "s0m3l1nk",
    "markType": "link",
  },
  {
    "_key": undefined,
    "_type": "@span",
    "children": [
      {
        "_type": "@text",
        "text": " and some bolded text",
      },
    ],
    "markDef": undefined,
    "markKey": "strong",
    "markType": "strong",
  },
]
`;
